web/book/tests/snapshots/snapshot__transforms__append-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees_1\nappend employees_2\n"
---
SELECT
  *
FROM
  employees_1
UNION
ALL
SELECT
  *
FROM
  employees_2

