web/book/tests/snapshots/snapshot__transforms__append-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees_1\nremove employees_2\n"
---
SELECT
  *
FROM
  employees_1 AS t
EXCEPT
  ALL
SELECT
  *
FROM
  employees_2 AS b

