web/book/tests/snapshots/snapshot__transforms__append-2.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees_1\nintersect employees_2\n"
---
SELECT
  *
FROM
  employees_1 AS t
INTERSECT
ALL
SELECT
  *
FROM
  employees_2 AS b

