web/book/tests/snapshots/snapshot__transforms__derive-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\n"
---
SELECT
  *,
  salary + payroll_tax AS gross_salary
FROM
  employees

