web/book/tests/snapshots/snapshot__transforms__filter-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nfilter (age > 25 || department != \"IT\")\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 25
  OR department <> 'IT'

