web/book/tests/snapshots/snapshot__transforms__filter-2.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nfilter (age | in 25..40)\n"
---
SELECT
  *
FROM
  employees
WHERE
  age BETWEEN 25 AND 40

