web/book/tests/snapshots/snapshot__transforms__from-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from e = employees\nselect e.first_name\n"
---
SELECT
  first_name
FROM
  employees AS e

