web/book/tests/snapshots/snapshot__transforms__join-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\njoin side:left positions [employees.id==positions.employee_id]\n"
---
SELECT
  employees.*,
  positions.*
FROM
  employees
  LEFT JOIN positions ON employees.id = positions.employee_id

