web/book/tests/snapshots/snapshot__transforms__join-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\njoin side:left p=positions [employees.id==p.employee_id]\n"
---
SELECT
  employees.*,
  p.*
FROM
  employees
  LEFT JOIN positions AS p ON employees.id = p.employee_id

