web/book/tests/snapshots/snapshot__transforms__select-5.snap
---
source: web/book/tests/snapshot.rs
expression: "from tracks\nselect [track_id, title, composer, bytes]\nselect ![title, composer]\n"
---
SELECT
  track_id,
  bytes
FROM
  tracks

