web/book/tests/snapshots/snapshot__transforms__select-6.snap
---
source: web/book/tests/snapshot.rs
expression: "from artists\nderive nick = name\nselect ![artists.*]\n"
---
SELECT
  name AS nick
FROM
  artists

